--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@ a{
 .button-div{
     display: flex;
     justify-content: space-around;
-    width: 100%;  
+    width: 80%;  
     margin: 20px auto 0 auto;
 
 }
@@ -65,8 +65,8 @@ a{
 }
 
 .info-div{
-    margin: 30px auto;
-    padding: 30px;
+    margin: 50px auto;
+    width: 80%;
 }
 
 .info-title {
@@ -77,4 +77,5 @@ a{
 .paragraph {
     color: #DCDCDC;
     margin: 0 0 20px 0;
+    line-height: 150%;
 }
