--- a/src/style.css
+++ b/src/style.css
@@ -11,8 +11,17 @@ html{
     display: flex;
     flex-direction: column;
     width: 30vw;
-    height: 95vh;
+    height: 110vh;
     background-color: #1A1B21;
+}
+
+.image{
+    width: 70%;
+    margin: 20px auto 0 auto;
+}
+
+.header-div{
+    margin: 0;
 }
 
 h1{
@@ -85,5 +94,4 @@ a{
     justify-content: space-evenly;
     background-color: #161619;
     padding: 20px 70px;
-
 }
